data/derived/fa15/progs/unify/prog2169.ml.out
Characters 111-121:
  else (test (f b), false)
        ^^^^^^^^^^
Error: This expression has type int * bool
       but an expression was expected of type int
